# ipfs_embeddings_py

./: CLEANUP_COMPLETION.md  CLEANUP_GUIDE.md  COMPREHENSIVE_CLEANUP_PLAN.md  DOCKER_CICD_ALIGNMENT_COMPLETE.md  DOCUMENTATION_UPDATE_COMPLETION.md  Dockerfile  FINAL_PROJECT_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_INDEX.md  README.md  __init__.py  create.sh  docker-compose.yml  docker-deploy.sh  final_ci_cd_mcp_validation.py  final_ci_cd_validation.py  main.py  mcp_server.py  pyproject.toml  setup.py
autofaiss_embeddings/: autofaiss_embeddings.py
backup_deprecated_ipfs/: requirements.txt.backup
config/: conftest.py  pyproject.toml  pytest.ini  vector_databases.yaml
create_embeddings/: __init__.py  create_embeddings.py
docs/: IPFS_KIT_INTEGRATION_PLAN.md  README.md  changelog.md  configuration.md  contributing.md  development.md  duckdb-vector-service.md  faq.md  installation.md  ipfs-vector-service.md  quickstart.md  troubleshooting.md  vector-stores.md
ipfs_cluster_index/: __init__.py  ipfs_cluster_index.py
ipfs_embeddings_py/: __init__.py  chunker.py  elasticsearch_test.py  ipfs_embeddings copy.py  ipfs_embeddings.py  ipfs_embeddings_backup.py  ipfs_embeddings_clean.py  ipfs_multiformats.py  main.py  main_new.py  main_old.py  mock_ipfs.py  multi_modal.py  qdrant_kit.py  temporary_file.py  test_ipfs_embeddings.py
monitoring/: prometheus.yml
scripts/: audit_ipfs_usage.py  cleanup_directory.sh  deprecate_storacha_clusters.py  final_validation.py  migrate_to_ipfs_kit.py  run_full_ipfs_tests.sh  run_ipfs_test_debug.sh  run_ipfs_test_summary.sh  run_ipfs_tests.sh  run_patched_tests.py  run_tests.py  run_tests_with_env.sh  vector_database_assessment.py
search_embeddings/: __init__.py  search_embeddings.py  search_embeddings_old.py
services/: __init__.py  clustering_service.py  distributed_vector_service.py  embedding_service.py  ipfs_vector_service.py  vector_config.py  vector_service.py  vector_service_unified.py  vector_store_base.py  vector_store_factory.py
shard_embeddings/: __init__.py  shard_embeddings.py
sparse_embeddings/: __init__.py  sparse_embeddings.py
storacha_clusters/: __init__.py  storacha_clusters.py
storacha_clusters_backup/: __init__.py  storacha_clusters.py
test/: basic_validation_script.py  comprehensive_test_suite.py  conftest.py  final_validation.py  hanging_diagnostic.py  mocks.py  robust_timeout_tests.py  simple_validation.py  test_clustering_service.py  test_complete_integration.py  test_ipfs_vector_service.py  test_isolated_units.py  test_main_new_comprehensive.py  test_mcp_tools_comprehensive.py  test_mcp_tools_comprehensive_fixed.py  test_simple.py  test_vector_service.py
test_backup/: basic_test_runner.py  comprehensive_test_suite.py  conftest.py  file_based_test.py  file_output_test.py  final_test_runner.py  focused_workflow_test.py  hardware_tests.py  integration_tests.py  minimal_test.py  performance_tests.py  robust_timeout_tests.py  run_tests.py  simplified_test_suite.py  terminal_validation_test.py  test max batch size.py  validation_test.py
test_results/: add_distributed_test.txt  comprehensive_test_report_20250602_145625.json  (+12 more)
(+219 files in other folders)
